samples/_failures_safe/1761354175_b60448_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61d414f7.c: In function ‘main’:
./samples/SAFE/__tmp_61d414f7.c:144:9: error: expected declaration or statement at end of input
  144 |         }
      |         ^
./samples/SAFE/__tmp_61d414f7.c:144:9: error: expected declaration or statement at end of input
